--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -29,3 +29,7 @@ jobs:
       run: |
        npm run lint
       working-directory: DotnetTemplate.Web
+    
+    - name: Slack Notification
+      run: |
+       curl -X POST --data-urlencode "payload={\"channel\": \"#general\", \"username\": \"webhookbot\", \"text\": \"Build successful", \"icon_emoji\": \":ghost:\"}" https://hooks.slack.com/services/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
