--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,6 +3,10 @@ pipeline{
         docker {image 'node:14-alpine'}
     }
     stages{
-        
+        stage('Checkout'){
+            steps{
+                checkout scm
+            }
+        }
     }
 }
